--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-responsive": "^10.0.1",
     "react-router": "^7.6.0",
     "react-spinners": "^0.17.0",
     "react-swipeable": "^7.0.2",
