--- a/package.json
+++ b/package.json
@@ -12,15 +12,23 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.6",
     "axios": "^1.9.0",
+    "copy-to-clipboard": "^3.3.3",
+    "framer-motion": "^12.11.0",
+    "gray-matter": "^4.0.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-responsive": "^10.0.1",
     "react-router": "^7.6.0",
+    "react-router-dom": "^7.6.0",
     "react-spinners": "^0.17.0",
     "react-swipeable": "^7.0.2",
     "react-use-websocket": "^4.13.0",
+    "rehype-raw": "^7.0.0",
+    "rehype-sanitize": "^6.0.0",
+    "swiper": "^11.2.6",
     "tailwindcss": "^4.1.6"
   },
   "devDependencies": {
